Just a minor spacing issue

--- a/app/assets/stylesheets/sass/_layout.scss
+++ b/app/assets/stylesheets/sass/_layout.scss
@@ -238,7 +238,7 @@ body {
 
 	form {
 		text-align: center;
-		padding: 2em 0;
+		padding: 2em 0 0;
 	}
 
 	@include breakpoint(medium) {
